
AC_PREREQ(2.59)
AC_INIT(mod_domaintree, 1.4, mike@iworks.at)

AC_CONFIG_SRCDIR([mod_domaintree.c])
AC_CONFIG_HEADER([config.h])

AC_CHECK_HEADERS([unistd.h])
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_STDC
AC_CHECK_FUNCS([memmove strchr])

AC_ARG_WITH([apxs2], AC_HELP_STRING([--with-apxs2], [where the apxs2 tool is located]))

AC_MSG_CHECKING([for apxs2])
APXS2=apxs2
if test "$with_apxs2" -a -x "$with_apxs2"; then
	APXS2=$with_apxs2
	AC_MSG_RESULT([$APXS2])
else
	apxs2 >/dev/null 2>&1
	if test $? -eq 1; then
		APXS2=apxs2
		AC_MSG_RESULT([in \$PATH])
	else
		AC_MSG_RESULT([ ])
		AC_MSG_ERROR([please specify path to the apxs2 tool through --with-apxs2])
	fi
fi

AC_SUBST(APXS2)

AC_OUTPUT(Makefile)
